--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "occmee <occmee@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0",
     "deep-extend": "^0.6.0",
     "dotenv": "^6.2.0",
+    "isomorphic-fetch": "^2.2.1",
     "winston": "^3.1.0"
   },
   "devDependencies": {
